--- a/test.html
+++ b/test.html
@@ -60,6 +60,25 @@
     #copyButton {
       margin-top: 10px;
     }
+
+    /* Mobile Styles */
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
+
+      .container {
+        padding: 10px;
+      }
+
+      input[type="text"] {
+        padding: 6px;
+      }
+
+      button {
+        padding: 8px 16px;
+      }
+    }
   </style>
 </head>
 <body>
