--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Anime Data Generator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -59,6 +61,25 @@
 
     #copyButton {
       margin-top: 10px;
+    }
+
+    /* Mobile Styles */
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
+
+      .container {
+        padding: 10px;
+      }
+
+      input[type="text"] {
+        padding: 6px;
+      }
+
+      button {
+        padding: 8px 16px;
+      }
     }
   </style>
 </head>
@@ -196,4 +217,5 @@
   </script>
 
 </body>
-</html>
+  </html>
+  
