--- a/index.html
+++ b/index.html
@@ -279,6 +279,16 @@
             </ul>
           </div>
         </div>
+
+        <div class="toggle tie-sc-open">
+          <h3 class="toggle-head">
+            Trailer <span aria-hidden="true" class="fa fa-angle-down"></span>
+          </h3>
+          <div class="toggle-content" style="text-align: center;">
+            <iframe width="560" height="315" src="${data.data.trailer.embed_url}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        
         <div class="uk-alert uk-alert-primary" data-uk-alert="">
           <!--a class="uk-alert-close" data-uk-close></a-->
           <p>
