--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <li>Studios: ${data.data.studios.map(studio => studio.name).join(', ')}</li>
               <li>Source: ${data.data.source}</li>
               <li>Genres: ${data.data.genres.map(genre => genre.name).join(', ')}</li>
-              <li id='theme'>Themes: ${data.data.themes.map(theme => theme.name).join(', ')}</li>
+              <li>Themes: ${data.data.themes.map(theme => theme.name).join(', ')}</li>
               <li>Demographics: ${data.data.demographics.map(demographic => demographic.name).join(', ')}</li>
               <li>Duration: ${data.data.duration}</li>
               <li>Rating: ${data.data.rating}</li>
