--- a/judas.html
+++ b/judas.html
@@ -332,14 +332,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td><span class="num">#1</span> GD</td>
-          <td>Eng</td>
-          <td><span>1080p</span></td>
-          <td>
-            <a class="btn sm rnd" href="#" rel="nofollow" target="_blank">Download</a>
-          </td>
-        </tr>
+        ${buttonsHTML}
       </tbody>
     </table>
   </div>
