--- a/judas.html
+++ b/judas.html
@@ -3,7 +3,17 @@
 <head>
   <title>Anime Data Generator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <!--Meta Icon-->
+    <link expr:href='data:blog.homepageUrl + &quot;/favicon.ico&quot;' rel='icon' type='image/x-icon'/>
+      <link href='https://i.ibb.co/3SYRk6S/IMG-20230713-072224.jpg' rel='apple-touch-icon'/>
+        <link href='https://i.ibb.co/3SYRk6S/IMG-20230713-072224.jpg' rel='apple-touch-icon' sizes='57x57'/>
+          <link href='https://i.ibb.co/3SYRk6S/IMG-20230713-072224.jpg' rel='apple-touch-icon' sizes='72x72'/>
+            <link href='https://i.ibb.co/3SYRk6S/IMG-20230713-072224.jpg' rel='apple-touch-icon' sizes='76x76'/>
+              <link href='https://i.ibb.co/3SYRk6S/IMG-20230713-072224.jpg' rel='apple-touch-icon' sizes='114x114'/>
+                <link href='https://i.ibb.co/3SYRk6S/IMG-20230713-072224.jpg' rel='apple-touch-icon' sizes='120x120'/>
+                  <link href='https://i.ibb.co/3SYRk6S/IMG-20230713-072224.jpg' sizes='144x144'/>
+                    <link href='https://i.ibb.co/3SYRk6S/IMG-20230713-072224.jpg' rel='apple-touch-icon' sizes='152x152'/>
+                      <link href='https://i.ibb.co/3SYRk6S/IMG-20230713-072224.jpg' rel='apple-touch-icon' sizes='180x180'/>
   <style>
     body {
         font-family: Arial, sans-serif;
@@ -234,17 +244,19 @@
     }
 
     function generateHTMLCode(data) {
-      let buttonsHTML = '<tr>
+      let buttonsHTML = '';
+      for (const button of buttons) {
+        buttonsHTML += `<tr>
           <td><span class="num">#1</span> GD</td>
           <td>Eng</td>
           <td><span>${button.title}</span></td>
           <td>
             <a class="btn sm rnd" href="${button.url}" rel="nofollow" target="_blank">Download</a>
           </td>
-        </tr>';
-      for (const button of buttons) {
-        buttonsHTML += ``;
+        </tr>`;
       }
+      
+      
 
       const code = `
         <div><img border="0" data-original-height="446" data-original-width="300" src="${data.data.images.jpg.large_image_url}"/></div>
@@ -407,4 +419,5 @@
     }
   </script>
 </body>
-</html>
+  </html>
+  
