--- a/judas.html
+++ b/judas.html
@@ -258,8 +258,16 @@
       
       
 
-      const code = `
-        <div><img border="0" data-original-height="446" data-original-width="300" src="${data.data.images.jpg.large_image_url}"/></div>
+      const code = `<div class="separator" style="clear: both; text-align: center;">
+  <img
+    border="0"
+    data-original-height="800"
+    data-original-width="533"
+    height="640"
+    src="${data.data.images.jpg.large_image_url}"
+    width="426"
+  />
+</div>
 
 <!--[ Synopsis ]-->
 
