--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
     function addButton() {
       const title = prompt('Enter button title:');
-    st url = prompt('Enter button URL:');
+      const url = prompt('Enter button URL:');
 
       buttons.push({ title, url });
 
