--- a/judas.html
+++ b/judas.html
@@ -260,6 +260,7 @@
 
       const code = `<div class="separator" style="clear: both; text-align: center;">
   <img
+    style="display: none;"
     border="0"
     data-original-height="800"
     data-original-width="533"
