--- a/judas.html
+++ b/judas.html
@@ -332,7 +332,7 @@
 <div id="server">
   <ul class="serverEpisode" id="VideoVard">
     <div>
-      <div class="DagPlayOpt" data-embed="${data.data.trailer.embed_url}" data-id="Server-1">
+      <div class="DagPlayOpt" data-embed="https://www.youtube.com/embed/${data.data.trailer.youtube_id}" data-id="Server-1">
         <span>01</span>
       </div>
     </div>
