--- a/judas.html
+++ b/judas.html
@@ -349,7 +349,7 @@
       <thead>
         <tr>
           <th>Server</th>
-          <th>Subtitle</th>
+          <th>Language</th>
           <th>Quality</th>
           <th>Link</th>
         </tr>
