--- a/index.html
+++ b/index.html
@@ -280,15 +280,12 @@
         </div>
 
 
-        <div class="uk-alert uk-alert-primary" data-uk-alert="">
-          <!--a class="uk-alert-close" data-uk-close></a-->
-          <p>
-            <span class="uk-margin-xsmall-right" data-uk-icon="happy"></span> To access
-            the private drive just open Google Group and join the Google Group, ignore
-            the rest. After that, Enjoy...&nbsp;<a href="https://groups.google.com/g/bondgreninja" target="_blank">Here</a>
-          </p>
-        </div>
-
+        <div class="box download  ">
+			    <div class="box-inner-block">
+				     <span class="fa tie-shortcode-boxicon"></span>To access the private drive just open Google Group and join the Google Group, ignore the rest.<br />
+After that, Enjoy&#8230; <a href="https://groups.google.com/g/bondgreninja" target="_blank" rel="noopener">Here</a>
+			    </div>
+		    </div>
         <div class="toggle tie-sc-open">
           <h3 class="toggle-head">
             Google Drive <span aria-hidden="true" class="fa fa-angle-down"></span>
