--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
   </div>
 
 <div class='genbox' id="generatedDataBox1"></div>
+<div class='genbox' id="generatedDataBox4"></div>
 <div class='genbox' id="generatedDataBox2"></div>
+<div class='genbox' id="generatedDataBox3"></div>
 
   <button id="copyButton" onclick="copyGeneratedCode()">Copy Code</button>
   <button id="addButton" onclick="addButton()">Add Button</button>
