--- a/Hindi.html
+++ b/Hindi.html
@@ -58,6 +58,6 @@
     <div id="generatedCode"></div>                                  
   </div>
 
-  <script src="/Anime/src/script.js"></script>
+  <script src="/Anime/src/hindi.js"></script>
 </body>
 </html>
