--- a/Hindi.html
+++ b/Hindi.html
@@ -32,10 +32,17 @@
 
   <!-- Type Selector -->
   <select id="typeSelect" multiple>
+    <option value="WEB">Hindi Dub</option>
+    <option value="WEB">DVD</option>
     <option value="Dual Audio">Dual Audio</option>
     <option value="Eng Sub">Eng Sub</option>
+    <option value="WEB">Eng Dub</option>
     <option value="BD">BD</option>
     <option value="WEB">WEB</option>
+    <option value="WEB">Tamil Dub</option>
+    <option value="WEB">Telugu Dub</option>
+    <option value="WEB">Malayalam Dub</option>
+    <option value="WEB">Multi Audio</option>
   </select>
 </div>
 
@@ -45,9 +52,9 @@
   </div>
 
 <div class='genbox' id="generatedDataBox1"></div>
-<div class='genbox' id="generatedDataBox4"></div>
-<div class='genbox' id="generatedDataBox2"></div>
-<div class='genbox' id="generatedDataBox3"></div>
+<div style='display:none;' class='genbox' id="generatedDataBox4"></div>
+<div style='display:none;' class='genbox' id="generatedDataBox2"></div>
+<div style='display:none;' class='genbox' id="generatedDataBox3"></div>
 
   <button id="copyButton" onclick="copyGeneratedCode()">Copy Code</button>
   <button id="addButton" onclick="addButton()">Add Button</button>
