--- a/Hindi.html
+++ b/Hindi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Anime Data Generator Hindip</title>
+  <title>Anime Data Generator Hindi</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Meta Icon -->
   <link expr:href='data:blog.homepageUrl + &quot;/favicon.ico&quot;' rel='icon' type='image/x-icon'/>
@@ -18,7 +18,7 @@
  <link rel="stylesheet" href="/Anime/src/style.css"/>
   </head>
 <body>
-  <h1>Anime Data Generator</h1>
+  <h1>Anime Data Generator Hindi</h1>
 <div id="selectorsContainer">
   <!-- Resolution Selector -->
   <select id="resolutionSelect" multiple>
